<resources>
    <string name="app_name">grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="location_head">Please add your location to see if we deliver to your area</string>

    <string name="lab_name">Name*</string>
    <string name="lab_add">House no &amp; Building name*</string>
    <string name="lab_street">Street name*</string>
    <string name="lab_local">Locality*</string>
    <string name="lab_city">City &amp; State*</string>
    <string name="lab_pin">Pin Code*</string>
    <string name="lab_land">Landmark (optional)</string>
    <string name="lab_venderAdd">Complex name &amp; Building name*</string>

</resources>
