<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:paddingLeft="20dp">


                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/iv_no_profile"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:hint="@string/lab_name" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PERSONAL DETAILS"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="horizontal">

                    <!-- <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Date of birth"
                         android:layout_marginBottom="8dp"/> -->

                    <!--<com.mikhaellopez.lazydatepicker.LazyDatePicker-->
                        <!--android:id="@+id/lazyDatePicker"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--app:ldp_text_color="@android:color/black"-->
                        <!--app:ldp_hint_color="@color/lightBlack"-->
                        <!--app:ldp_date_format="mm-dd-yyyy" />-->

                    <TextView
                        android:id="@+id/lazyDatePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:minWidth="110dp"
                        android:text="27-08-18"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:drawableRight="@drawable/ic_calendar"
                        android:drawableEnd="@drawable/ic_calendar" />

                    <!--    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender"
                            android:layout_marginTop="10dp"/> -->


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_gravity="end"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/iv_male"/>

                        <ToggleButton
                            android:id="@+id/toggleButton1"
                            android:layout_width="47dp"
                            android:layout_height="47dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/gender_toggle"
                            android:checked="true"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textOff=""
                            android:textOn="" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/iv_female"
                            android:layout_marginLeft="10dp"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DETAILS"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:id="@+id/input_house"
                            android:hint="@string/lab_add"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bolder_color"></View>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:id="@+id/input_street"
                            android:hint="@string/lab_street"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bolder_color"></View>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:id="@+id/input_locality"
                            android:hint="@string/lab_local"/>

                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bolder_color"></View>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:id="@+id/input_city"
                            android:hint="@string/lab_city"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bolder_color"></View>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:id="@+id/input_pin"
                            android:hint="@string/lab_pin"/>

                    </android.support.design.widget.TextInputLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/bolder_color"></View>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:background="@null"
                            android:id="@+id/input_land"
                            android:hint="@string/lab_land"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>




            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:text="Submit"
                android:id="@+id/bt_submit"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>